Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-395

obd_zombie_barrier is not barrier actually

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.1.0
    • None
    • None
    • 3
    • 4981

      obd_zombie_barrier() is supposed to make sure there are no exports remains and we can proceed with obd cleanup. In fact it makes sure only there are no exports in zombie list head, but export can be still not destroyed. This can lead to issues seen in ORI-125 and ORI-211, because lu_target is freed before all exports are gone.

      The solution could be fix for zombie barrier to make it really barrier which waits for all exports are destroyed.

            tappro Mikhail Pershin
            tappro Mikhail Pershin
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: